// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> by default matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bCeqqR k-LegacyRewardCard"
  disabled={false}
>
  <div
    className="sc-bdVaJa fdLNbY"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--10@l"
      >
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa zBUGX"
          >
            <h1
              className="sc-htpNat KvJvV k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-bdVaJa iDiPml"
          >
            <div
              className="sc-bxivhb gmqSjE k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          
          <div
            className="sc-bdVaJa jtnNso"
          >
            <p
              className="sc-ifAKCX NRwhd k-u-color-font1"
            >
              Custom text description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContributionCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bCeqqR k-LegacyRewardCard"
  disabled={false}
>
  <div
    className="sc-bdVaJa fdLNbY"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
      >
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa zBUGX"
          >
            <h1
              className="sc-htpNat KvJvV k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-bdVaJa iDiPml"
          >
            <div
              className="sc-bxivhb gmqSjE k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          <div
            className="sc-bdVaJa gSHEXD"
          >
            <p
              className="sc-EHOje jvzENE k-u-color-font1 k-u-size-huge k-u-weight-bold k-u-margin-none"
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-bdVaJa ggQxmM"
          >
            <p
              className="sc-ifAKCX NRwhd k-u-color-font1"
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa iDiPml"
          >
            <span
              className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title contributors 
              <span
                className="sc-EHOje jvzENE k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title delivery 
              <span
                className="sc-EHOje jvzENE k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title availability 
              <span
                className="sc-EHOje jvzENE k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          className="sc-bdVaJa jtnNso"
        >
          <button
            aria-labelledby="Custom text button"
            className="k-Button k-Button--helium k-Button--big k-LegacyRewardCard__button"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            className="sc-bdVaJa jtfdLD"
          >
            <div
              className="k-LegacyRewardCard__myContribution"
            >
              <span
                className="sc-bZQynM RuXvg k-LegacyRewardCard__iconBadge"
                disabled={false}
              >
                <span
                  className="sc-gzVnrw fyhbVQ"
                >
                  <svg
                    className="k-IconBadge__svg"
                    fill="#fff"
                    height="8"
                    viewBox="0 0 11 8"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                    />
                  </svg>
                </span>
              </span>
              <div
                className="k-LegacyRewardCard__myContribution__text"
              >
                <span
                  className="sc-EHOje jvzENE k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="sc-EHOje jvzENE k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s LegacyRewardCard__col_image"
      >
        <div
          className="sc-bdVaJa bDWFJH"
        >
          <div
            className={null}
          >
            <img
              alt="Image alt"
              className="k-LegacyRewardCard__image"
              src="#image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContributionCard /> with tiny version matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bCeqqR k-LegacyRewardCard k-LegacyRewardCard--tinyVersion k-LegacyRewardCard--sOrLessVersion"
  disabled={false}
>
  <div
    className="sc-bdVaJa feOtXc"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12"
      >
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa zBUGX"
          >
            <h1
              className="sc-htpNat NZuTE k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-bdVaJa iDiPml"
          >
            <div
              className="sc-bxivhb gmqSjE k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          <div
            className="sc-bdVaJa gSHEXD"
          >
            <p
              className="sc-EHOje jvzENE k-u-color-font1 k-u-size-big k-u-weight-bold k-u-margin-none"
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-bdVaJa ggQxmM"
          >
            <p
              className="sc-ifAKCX fwkQff k-u-color-font1"
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          className={null}
        >
          <div
            className="sc-bdVaJa iDiPml"
          >
            <div>
              <span
                className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title contributors 
                <span
                  className="sc-EHOje jvzENE k-u-weight-light"
                >
                  Custom value contributors
                </span>
              </span>
            </div>
            <div>
              <span
                className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title delivery 
                <span
                  className="sc-EHOje jvzENE k-u-weight-light"
                >
                  Custom value delivery
                </span>
              </span>
            </div>
            <div>
              <span
                className="sc-EHOje jvzENE k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title availability 
                <span
                  className="sc-EHOje jvzENE k-u-weight-light"
                >
                  Custom value availability
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12 LegacyRewardCard__col_image"
      >
        <div
          className="sc-bdVaJa bDWFJH"
        >
          <div
            className={null}
          >
            <img
              alt="Image alt"
              className="k-LegacyRewardCard__image"
              src="#image"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bdVaJa chAJzq"
    >
      <div
        className="k-Grid k-LegacyRewardCard__choiceButton"
      >
        <div
          className="k-Grid__col--12"
        >
          <div
            className="k-LegacyRewardCard__myContribution"
          >
            <span
              className="sc-bZQynM RuXvg k-LegacyRewardCard__iconBadge"
              disabled={false}
            >
              <span
                className="sc-gzVnrw fyhbVQ"
              >
                <svg
                  className="k-IconBadge__svg"
                  fill="#fff"
                  height="8"
                  viewBox="0 0 11 8"
                  width="11"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
                  <path
                    d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                  />
                </svg>
              </span>
            </span>
            <div
              className="k-LegacyRewardCard__myContribution__text"
            >
              <span
                className="sc-EHOje jvzENE k-u-color-font1 k-u-size-tiny k-u-weight-regular"
              >
                Custom my contribution
                <br />
                <a
                  className="sc-EHOje jvzENE k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                  href="Custom manage link contribution"
                >
                  Custom manage contribution
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-labelledby="Custom text button"
      className="k-Button k-Button--helium k-Button--big k-LegacyRewardCard__button"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="button"
    >
      Custom text button
    </button>
  </div>
</div>
`;
